# open-computer-use

./: .gitignore  README.md  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
agent/: __main__.py  browser.py  core.py  prompts.py  skills.py  ui.py
benchmarks/: README.md  runner.py  speed.py  webvoyager.py  webvoyager_results.json
examples/: minimal_agent.py  openrouter_agent.py  openrouter_desktop_agent.py  openrouter_live_agent.py
ocu/: __init__.py  cli.py  env.py  resolve.py  schema.py  serialize.py  state.py
ocu/executors/: __init__.py  cdp.py  xdotool.py  ydotool.py
ocu/integrations/: anthropic.py  mcp_server.py  openai.py  openrouter.py
ocu/sensors/: __init__.py  ax_linux.py  base.py  browser_cdp.py  vision.py
tests/: live_browser_smoke.py  live_desktop_smoke.py  test_agent.py  test_ax_linux_sensor.py  test_browser_facade.py  test_browser_sensor.py  test_desktop_facade.py  test_integrations.py  test_openrouter.py  test_resolve.py  test_serialize.py  test_state.py  test_xdotool_executor.py  test_ydotool_executor.py
tests/fixtures/: cart_frame_1.json  cart_frame_2.json
