[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-computer-use"
version = "0.1.0"
description = "A perception and action layer for browser-use agents: cheap eyes, deterministic hands."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "open-computer-use contributors"}]
keywords = ["browser-use", "agents", "playwright", "mcp", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
browser = ["playwright>=1.45"]
mcp = ["mcp>=1.0"]
openrouter = ["openai>=1.40"]
dev = ["pytest>=8"]

[project.scripts]
ocu = "ocu.cli:main"

[tool.setuptools.packages.find]
include = ["ocu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
